--- a/src/app/components/contattavenditore/contattavenditore.component.html
+++ b/src/app/components/contattavenditore/contattavenditore.component.html
@@ -3,7 +3,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
-<button class="btn contatta-venditore-btn" (click)="openModal()">Contatta il Venditore</button>
+
+<button class="btn contatta-venditore-btn" (click)="openModal()">{{ buttonText }}</button>
 
 <div class="modal-overlay" [ngClass]="{'d-block': showModal, 'd-none': !showModal}">
   <div class="modal-dialog">
