--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -18,13 +18,13 @@ mat-dialog-content {
   animation: fadeIn 1s ease;
 }
 
-/* Animazione di fade-in */
+
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-30px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
-/* Titoli */
+
 h2 {
   font-family: 'Poppins', sans-serif;
   text-align: center;
@@ -33,13 +33,12 @@ h2 {
   color: black;
 }
 
-/* Etichette dei form */
+
 .form-label {
   font-weight: 600;
   font-size: 14px;
 }
 
-/* Campi di input */
 .form-control {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -51,7 +50,6 @@ h2 {
   border-color: black;
 }
 
-/* Pulsante principale (Login/Registrati) */
 .btn-primary {
   background: linear-gradient(90deg, #222020, #8f8c8c);
   border: none;
@@ -75,6 +73,6 @@ h2 {
 
 
 .text-center button:active {
-  transform: translateY(0); /* Torna alla posizione originale */
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); /* Ombra ridotta */
+  transform: translateY(0);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
