Provato ad aggiungere API di Facebook

--- a/src/app/components/modifica/modifica-dettaglio/modifica-dettaglio.component.html
+++ b/src/app/components/modifica/modifica-dettaglio/modifica-dettaglio.component.html
@@ -45,8 +45,8 @@
     </div>
 
     <div>
-      <label for="etichetta">Etichetta</label>
-      <input id="etichetta" formControlName="etichetta" />
+      <label for="data">Data</label>
+      <input id="data" formControlName="data" />
     </div>
 
     <div>
