--- a/src/app/components/aste/aste-dettaglio/aste-dettaglio.component.html
+++ b/src/app/components/aste/aste-dettaglio/aste-dettaglio.component.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <app-recensione [immobileId]="immobileId"></app-recensione>
+  <app-recensione [venditore]="asteDetails.utente.username" [immobileId]="immobileId"></app-recensione>
 
   <div class="recensioni-container mt-5">
     <h3 class="text-center mb-4">Recensioni</h3>
