--- a/src/app/components/annunci/annunci.component.css
+++ b/src/app/components/annunci/annunci.component.css
@@ -6,8 +6,8 @@
 
 /* Immagine */
 .galleria-img {
-  width: 330px;
-  height: 330px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
