--- a/src/app/components/modifica/modifica.component.css
+++ b/src/app/components/modifica/modifica.component.css
@@ -4,10 +4,10 @@
   justify-content: center;
 }
 
-/* Immagine */
+
 .galleria-img {
-  width: 333px;
-  height: 333px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -16,7 +16,6 @@
   transform: scale(1.05);
   transition: transform 0.3s ease;
 }
-
 
 .annunci-container {
   max-width: 800px;
@@ -79,30 +78,3 @@ google-map {
   margin-top: 15px;
 }
 
-button {
-  width: 100%;
-  padding: 12px;
-  background: linear-gradient(135deg, #007bff, #0056b3);
-  border: none;
-  border-radius: 8px;
-  color: white;
-  font-size: 1.2rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: background 0.3s ease, box-shadow 0.3s ease;
-}
-
-button:hover {
-  background: linear-gradient(135deg, #0056b3, #003f7f);
-  box-shadow: 0 4px 12px rgba(0, 123, 255, 0.5);
-}
-
-button:active {
-  transform: scale(0.98);
-}
-
-button:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgba(0, 123, 255, 0.7);
-}
