--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -8,8 +8,8 @@
     <h2>Accedi a EasyHome</h2>
     <form id="loginForm" (ngSubmit)="login()">
       <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input type="email" name="username" [(ngModel)]="user.username" class="form-control" placeholder="Inserisci la tua email" required />
+        <label class="form-label">Username</label>
+        <input type="text" name="username" [(ngModel)]="user.username" class="form-control" placeholder="Inserisci il tuo username" required />
       </div>
       <div class="mb-3">
         <label class="form-label">Password</label>
