--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -229,6 +229,10 @@ a {
   transition: transform 0.3s ease-in-out;
 }
 
+.details-card p {
+  color: #000000;
+}
+
 .details-card h3 {
   margin-bottom: 1rem;
   color: #FF6B6B;
