--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -9,7 +9,7 @@
   </div>
 </header>
 
-<main class="container col-md-6 rounded p-5 shadow border border-light-red">
+<main class="container col-md-6 mb-5 rounded p-5 shadow border border-light-red">
   <div class="alert alert-info text-center" role="alert">
     Benvenuto nella pagina di contatto di EasyHome
   </div>
