--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   <div class="menu">
     <ng-container *ngFor="let item of menuItems">
       <!-- se l'elemento è "Modifica/Aggiungi Annuncio" e l'utente è venditore, apri il dialog -->
-      <ng-container *ngIf="item.label === 'Gestisci Annunci' && isVenditore; else normalButton">
+      <ng-container *ngIf="item.label === 'Gestisci Annunci' && (isVenditore); else normalButton">
         <button mat-button (click)="openDialogWithPrevent($event, editAddDialog)">
           <mat-icon>{{ item.icon }}</mat-icon>
           <span>{{ item.label }}</span>
@@ -58,7 +58,7 @@
     <span *ngIf="logged" class="username">{{ username }}</span>
   </div>
   <!-- From Uiverse.io by Bodyhc -->
-  <div *ngIf="logged" class="checkbox-wrapper-35">
+  <div *ngIf="logged && this.role=='ROLE_USER'" class="checkbox-wrapper-35">
     <input
       type="checkbox"
       class="switch"
