--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -8,10 +8,12 @@
   <div class="blur-overlay"></div>
   <div class="container">
     <div class="header">
+      <button class="home-btn" (click)='goHome()'>Home</button>
       <h2>Pannello di controllo</h2>
-      <span class="username">{{ username }}</span>
+      <span class="username" >{{ username }}</span>
       <button class="logout-btn" (click)="logout()">Logout</button>
     </div>
+
     <hr class="horizontalrow">
 
     <div class="admin-container">
