--- a/src/app/components/annunci/annunci.component.html
+++ b/src/app/components/annunci/annunci.component.html
@@ -5,20 +5,24 @@
 <div class="container mt-5">
   <h2 class="text-center mb-4">🏡 Annunci Disponibili</h2>
 
+  <select id="sorting"  class="form-select mb-4 w-auto d-inline-block"  [(ngModel)]="selectedSorting" (change)="sortImmobili()">
+    <option value="filtro" selected disabled>Filtro</option>
+    <option value="prezzo">Prezzo</option>
+    <option value="mq">Metri Quadri</option>
+  </select>
+
+
   <div *ngIf="immobiliminimal.length === 0" class="alert alert-warning text-center">
     Nessun annuncio trovato. Prova a modificare i filtri di ricerca.
   </div>
 
-  <!-- lista degli immobili -->
+  <!-- Lista degli immobili -->
   <div class="row justify-content-center">
     <div class="col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let immobile of immobiliminimal">
       <div class="card shadow-lg h-100">
-
         <div class="galleria">
           <img class="galleria-img" [src]="getImageSrc(immobile.immagine)" alt="Immagine immobile" (error)="onImageError($event)">
         </div>
-
-
 
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ immobile.nome }}</h5>
@@ -27,7 +31,7 @@
             <span *ngIf="immobile.prezzo_scontato > 0" class="text-muted text-decoration-line-through">
               €{{ immobile.prezzo | number:'1.0-0' }}
             </span>
-                      <span class="fw-bold ms-2">
+            <span class="fw-bold ms-2">
               €{{ (immobile.prezzo_scontato > 0 ? immobile.prezzo_scontato : immobile.prezzo) | number:'1.0-0' }}
             </span>
           </p>
@@ -39,7 +43,7 @@
           </ul>
 
           <div class="mt-auto text-center">
-            <a [routerLink]="['/annunci', immobile.id]"  class="btn btn-primary">Dettagli</a>
+            <a [routerLink]="['/annunci', immobile.id]" class="btn btn-primary">Dettagli</a>
           </div>
         </div>
       </div>
